# paper-siphon

./: CHANGELOG.md  README.md  pyproject.toml
bench/: .gitignore  README.md  aggregate.py  gen_meta.py  judge.py  judge_claude_workflow.js  lib.py  run.py  run_dots_after.sh  run_dots_paddle.sh  run_finish_mlx.sh  run_fixup.sh  run_judge.py  run_mlx_all.sh  run_nano_olm.sh  run_paddle16.sh  run_wave2.sh  run_wave3.sh
bench/backends/: __init__.py  _hf_vlm_runner.py  _lighton2_corpus.py  _lighton2_mlx_corpus.py  _lighton2_runner.py  _mlx_corpus.py  docling_baselines.py  mlx_generate_runner.py  subprocess_backends.py
bench/corpus/: manifest.yaml
bench/judge/arxiv_adam/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_adam/labels/: label_A.md  label_B.md  label_C.md  label_D.md  label_E.md  label_F.md  label_G.md  label_H.md
bench/judge/arxiv_attention/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_attention/labels/: label_A.md  label_B.md  label_C.md  label_D.md  label_E.md  label_F.md  label_G.md  label_H.md
bench/judge/arxiv_bahdanau/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_bahdanau/labels/: label_A.md  label_B.md  label_C.md  label_D.md  label_E.md  label_F.md  (+2 more)
bench/judge/arxiv_batchnorm/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_bert/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_ddpm/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_instructgpt/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_resnet/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/arxiv_vit/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/ssl_2020_tigers/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/ssl_2020_zjunlict/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/ssl_2025_delft/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/ssl_2025_first_order/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/judge/ssl_2025_the_bots/: keymap.json  packet.json  verdict.claude.json  verdict.codex.json
bench/report/: README.md
docs/superpowers/specs/: 2026-07-08-backend-benchmark-design.md  2026-07-09-glm-ocr-backend-design.md
paper_siphon/: _glm_runner.py  backends.py  cli.py  quality.py
tests/: test_backends.py  test_cli.py  test_glm_runner.py  test_quality.py
(+88 files in other folders)
