[project]
name = "paper-siphon"
version = "0.3.0"
description = "Extract clean Markdown from academic PDFs - like drinking through a straw"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "docling>=2.0",
    "onnxruntime>=1.20",
]

# The --vlm backends (GLM-OCR on Apple Silicon, marker elsewhere) are NOT
# optional dependencies: they run in an isolated `uv run --with` environment so
# their newer transformers pin cannot break Docling's default pipeline. The
# --vlm path only requires `uv` on PATH.

[project.scripts]
paper-siphon = "paper_siphon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
# Tooling for the backend benchmark in bench/ (not needed to use paper-siphon).
# Backend-specific model runtimes are installed into isolated venvs at run time.
bench = [
    "pymupdf>=1.24",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
